# harmonic

./: README.md  app.js  index.html  package-lock.json  package.json  styles.css
.github/workflows/: release.yml
packaging/: harmonic.desktop  spectrum.desktop
redesign/: DESIGN.md
scripts/: dev-server.mjs  ensure-vite-dev.mjs
src/: dom.ts  main.ts  metrics.ts  palettes.ts  settings.ts  spectrum.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/audio/: browserCapture.ts  tauriCapture.ts
src/visualizer/: renderer.ts
