[package]
name = "spectrum"
version = "0.1.0"
edition = "2021"

[lib]
name = "retro_spectrum_visualizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
